--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-    "name": "sj.portfolio",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview",
-        "check": "svelte-check --tsconfig ./tsconfig.json"
-    },
-    "devDependencies": {
-        "@sveltejs/vite-plugin-svelte": "^3.0.1",
-        "@tsconfig/svelte": "^5.0.2",
-        "prettier": "^3.2.4",
-        "prettier-plugin-svelte": "^3.1.2",
-        "svelte": "^4.2.8",
-        "svelte-check": "^3.6.2",
-        "tslib": "^2.6.2",
-        "typescript": "^5.2.2",
-        "vite": "^5.0.8"
-    }
+	"name": "sj.portfolio",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json"
+	},
+	"devDependencies": {
+		"@slidy/core": "^3.7.6",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
+		"@tsconfig/svelte": "^5.0.2",
+		"@types/animejs": "^3.1.12",
+		"prettier": "^3.2.4",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.8",
+		"svelte-check": "^3.6.2",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^5.0.8"
+	},
+	"dependencies": {
+		"@slidy/svelte": "^3.4.4",
+		"animejs": "^3.2.2"
+	}
 }
