feat: bg and main video in cards

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
 	"useTabs": true,
 	"singleQuote": false,
 	"plugins": ["prettier-plugin-svelte"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [
+		{ "files": "src/**/*.{svelte}", "options": { "parser": "svelte" } }
+	]
 }
